--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <li>We Feel Fine</li>
                 <li>Ototo</li>
             </ol>
-            <!--<div id="link"> <a href="https://github.com/SongIIII0P/ResearchJournal.git">https://github.com/SongIIII0P/ResearchJournal.git</a></div>-->
+            <!--<div id="link"> <a href="https://songiiii0p.github.io/researchJournal/">https://songiiii0p.github.io/researchJournal/</a></div>-->
         </div>
         </div>
     </section>
