--- a/index.html
+++ b/index.html
@@ -266,9 +266,17 @@
         h1 {
         font-size: 4em;
         line-height: 1em;
-        filter: drop-shadow(0px 0px 8px #7a7a7a);
-        -webkit-filter: drop-shadow(0px 0px 8px #7a7a7a);
+        filter: drop-shadow(0px 0px 12px #9e9e9e);
+        -webkit-filter: drop-shadow(0px 0px 12px #9e9e9e);
         }
+
+        .cover h1 {
+        font-size: 4em;
+        line-height: 1em;
+        filter: drop-shadow(0px 0px 10px #3f3f3f);
+        -webkit-filter: drop-shadow(0px 0px 10px #3f3f3f);
+        }
+
 
         h2{
             font-size: 0.9em;
